--- a/locales/dev/translation.json
+++ b/locales/dev/translation.json
@@ -21,13 +21,13 @@
         "hoursPerDay": "Horas por dia",
         "appBehavior": "Comportamento do App",
         "notification": "Notificação",
-        "allowRecurringNotifications": "Permitir notificações recorrentes",
-        "minutesBetweenNotifications": "Minutos entre notificações",
+        "allowRecurringNotifications": "Pó incomodá traveiz",
+        "minutesBetweenNotifications": "Minutin entre as cutucada",
         "startOnLogin": "Iniciar com Login",
         "countTodayOnTotals": "Contar Hoje nos totais",
         "overallBalanceStart": "Data de início do balanço total",
-        "minimizeToTray": "Botão de minimizar deve minimizar para o Tray",
-        "closeMinimizeToTray": "Botão de fechar deve minimizar para o Tray",
+        "minimizeToTray": "Clicá no tracin isconde",
+        "closeMinimizeToTray": "Clicá no xizin isconde",
         "themes": "Temas",
         "systemDefault": "Padrão do Sistema",
         "light": "Claro",
